--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -48,7 +48,6 @@
     border: 0px solid yellow; //#db
   }
 
-
   /* unfortunately, I think the correct way to update this is with native code:
     https://developer.apple.com/reference/uikit/uiviewcontroller#//apple_ref/occ/instm/UIViewController/preferredStatusBarStyle  */
   #statusBar-bg {
@@ -91,42 +90,49 @@
 
 // CONTENT CONTAINER -------------------------------------
 
-  #content-container {
-    display: -webkit-flex;
-    -webkit-flex: 1;
-    -webkit-flex-direction: column;
-    justify-content: flex-start;
-    text-align: center;
-    height: $appH - $rowH;
-    width: $appW - $navW - $col-pad; //#hc this will need to be padding
-    margin-top: $rowH;
-    margin-left: $navW; // #hc this needs to be a var
-    border: 0px solid red; //#db
-  }
+  // IN ROOT TEMPLATE
+    #content-container { // this styles the view box in root_template.html -- tag = ion-nav-view
+      display: -webkit-flex;
+      -webkit-flex: 1;
+      -webkit-flex-direction: column;
+      justify-content: flex-start;
+      text-align: center;
+      height: $appH - $rowH;
+      width: $appW - $navW - $col-pad; //#hc this will need to be padding
+      margin-top: $rowH;
+      margin-left: $navW; // #hc this needs to be a var
+      border: 0px solid red; //#db
+    }
 
-  // NEED TO REVIEW --------------------
-    .text-content {
-        padding: 3rem;
+    // IN STATE TEMPLATES
+      // ion-view.[state]_template.html should be the direct descendant of #content-container
+      // global styles for the state-level ion-view go here   (individual styles for each state should go in ion-view.state-contentBox's direct descendant and should be styled in the state's .scss file)
+    .state-contentBox {
+      padding: 0; // reset 
+      margin: 0; // reset
+
+      display: -webkit-flex;
+      -webkit-flex: 1;
+      margin-top: $rowHalf;
+      height: auto;
+      width: auto;
+      font-size: 1rem;
+      border: 1px solid $blue-light; //#db
+    }
+
+    .pane {  
+      // not entirely sure what this does. seems to be an ion-thing that groups content. 
+      //currently, used in Resources & Profiles. It should probably be moved to the individual state .scss files #hc
+      flex-flow: column;
+      //border: 1px solid yellow;
     }
 
     canvas {
       background-color: $white;
+      // box-shadow
+      // rounded corners
     }
 
-    .text-and-lpc {
-      display: -webkit-flex;
-      -webkit-flex: 1;
-      font-size: 1rem;
-      padding: 3rem;
-    }
-
-    .text-and-lpc__text {
-      font-size: 14pt;
-    }
-
-    .pane {
-      flex-flow: column;
-    }
 
 // NAV CONTAINER -------------------------------------
   // All of the nav icon animations live in  'common-styles/_keyframeAni.scss' 
