--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -1,3 +1,9 @@
+// parent ele for all the resources content
+.resources-contentBox {  
+	//border: 1px solid violet;
+}
+
+
 .range-container
 {
 	display: flex;
