--- a/staRt/www/common-styles/_variables.scss
+++ b/staRt/www/common-styles/_variables.scss
@@ -24,6 +24,7 @@
 	//$elePadding-R: $appW * 0.07;  // 7% of appW
 
 	$rowH: 106px; //$appH / 7; //
+	$rowHalf: 54px; //$rowH/2
 
 
 	$nav-btnW: 100px; //10vw; //
