--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -67,12 +67,12 @@
 // PAGE HEADER -------------------------------------
   .bar-header {
     background-color: $blue-light;
-    height:  14vh !important; //$rowH; //
+    height:  $rowH;
     display: flex;
     align-items: center; // vertical align, but doesn't seem to work in iOS
     justify-content: space-between;
     box-shadow: $itemShadow;
-    padding-left: $navW; // #hc make pad vars
+    padding-left: $navW;
   }
 
   .bar .title {
@@ -98,10 +98,9 @@
       justify-content: flex-start;
       text-align: center;
       height: $appH - $rowH;
-      width: $appW - $navW - $col-pad; //#hc this will need to be padding
+      width: $appW; // - $navW - $col-pad; //#hc this will need to be padding
       margin-top: $rowH;
-      margin-left: $navW; // #hc this needs to be a var
-      border: 0px solid red; //#db
+      //border: 1px solid red; //#db
     }
 
     // IN STATE TEMPLATES
@@ -114,11 +113,20 @@
       display: -webkit-flex;
       -webkit-flex: 1;
       margin-top: $rowHalf;
+      margin-left: $navW; 
       height: auto;
-      width: auto;
+      width: $appW - $navW - $col-pad;
       font-size: 1rem;
       border: 1px solid $blue-light; //#db
     }
+
+    .state-contentBox--wide {  // used in tutorial for full width graphics
+      @extend .state-contentBox;
+      margin-left: 0;
+      padding: 0; 
+      width: $appW;
+    }
+
 
     .pane {  
       // not entirely sure what this does. seems to be an ion-thing that groups content. 
@@ -150,7 +158,7 @@
   }
 
   .navTabs {
-    height: 100vh;
+    height: $appH; //100vh;
     display: -webkit-flex;
     -webkit-flex: 1;
     -webkit-flex-direction: column;
@@ -178,7 +186,7 @@
       background-color: $blue-white;
       box-shadow: $itemShadow-select; //2px 1px 2px #d1d1d1;
       z-index: 25;
-      width: 110px;
+      width: $nav-btnW + 1; //~110px
     }
   }
 
@@ -187,9 +195,10 @@
   }
 
   .nav-svg {
-    height: 65px;
-    width: 65px;
+    height: 65px; //~61%
+    width: 65px; //~61%
     display: block;
     margin: 0 auto;
     padding-bottom: 5px;
+    //border: 1px solid yellow;
   }
