--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -119,7 +119,7 @@
       height: auto;
       width: $appW - $navW - $col-pad;
       font-size: 1rem;
-      border: 1px solid $blue-light; //#db DEBUG LINES
+      //border: 1px solid $blue-light; //#db DEBUG LINES
     }
 
     .state-contentBox--wide {  // used in tutorial for full width graphics
