--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -9,70 +9,71 @@
 }
 
 .sceneBox {
-	border: 1px solid yellow;
 	position: absolute;
+	top: 0;
 	margin-left: 170px;
 	width: 80%;
 	height: 475px;
 	z-index: 10;
+
+	//border: 1px solid yellow;
+}
+
+
+.swiper-slide {
+	//border: 1px solid pink;
 }
 
 
 // SANDBAR -------------------------------------
 
-.sandbarBox {
-	position: relative;
-	height: 150px;
-	top: 435px;
-	display: flex;
-	flex-direction: column;
-	z-index: 1;
-	//border: 1px solid lime;
-}
+	.sandbarBox {
+		position: relative;
+		height: $rowH * 2;
+		width: $appW;
+		top: $rowH * 4;
+		display: flex;
+		flex-direction: column;
+		z-index: 1;
+		background-image: url("../img/tutorial/sand.svg");
+		background-size: auto 100%;
+		//border: 1px solid lime;
+	}
 
-.sandbar-img {
-	position: absolute;
-	height: 150px;
-	width: $appW;
-	left: 0;
-	opacity: 1;
-	z-index: 1;
-	//border: 1px solid pink;
-}
+	.sandbar-coinRow {
+		position: relative;
+		display: inline-flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: nowrap;
+		margin-top: $rowHalf;
+		height: 100%;
+		margin-left: $navW;
+		width: $appW - $navW - $col-pad;
+		z-index: 25;
+		//border: 1px solid orange;
+	}
 
-.sandbar-coinRow {
-	position: absolute;
-	display: inline-flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	flex-wrap: nowrap;
+	.sandbar-coinBox {
+		align-self: flex-start;
+		padding: 0px 10px;
+		z-index: 25;
+		border: 1px solid white;
+	}
 
-	top: 44px;  // vert offset, or hgt of .sandbarBox - $rowH
-	height: $rowH;
-	margin-left: $navW;
-	width: $appW - $navW - $col-pad;
-	z-index: 25;
-	//border: 1px solid orange;
-}
+	.sandbar-coinImgBox {
+		height: 68px; //64%; //64%; //100%; //
+		// height: $rowHalf; //		#hc need a var for nav icon size
+		width: auto;
+		//border: 1px solid aqua;
+	}
 
-.sandbar-coinBox {
-	align-self: flex-start;
-	z-index: 25;
-	//border: 1px solid lime;
-}
+	.sandbar-coinImg {
 
-.sandbar-coinImgBox {
-	height: 68px; //64%;
-	width: 100px;
-	border: 1px solid white;
-}
+	}
 
-.sandbar-coinImg {
-	
-}
-
-.sandbar-coinTxt {
-	margin-top: 5px;
-}
+	.sandbar-coinTxt {
+		margin-top: 5px;
+	}
 
