--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -8,130 +8,102 @@
   -webkit-user-select: none;
 }
 
-#app-container {
-  display: -webkit-flex;
-  -webkit-flex-direction: row;
-  line-height: 1.7;
-  color: $grey;
-}
+// KEYFRAME ANIMATION BASE  =================================================================
+  // for some reason everything breaks when I move this out of _root_styles. Sorry!
 
-.bar-header {
-  background-color: $light-blue;
-  height: 14vh !important;
-  display: flex;
-  align-items: center;
-  padding-left: 120px;
-}
+  .animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
 
-.bar .title {
-  position: relative;
-  display: block;
-  text-transform: uppercase;
-  color: $blue;
-  font-weight: bold;
-  font-size: $header-type;
-  text-align: left;
-  overflow: visible;
-}
-
-#nav-and-content-container {
-  display: flex;
-  flex-flow: row nowrap;
-}
-
-#nav-container {
-  display: -webkit-flex;
-  -webkit-flex-direction: column;
-  width: 10vw;
-  z-index: 999;
-  border: 0px solid red;
-}
-
-#content-container {
-  position: relative;
-  display: block;
-  text-align: center;
-  /* display: -webkit-flex;
-  -webkit-flex: 1;
-  -webkit-flex-direction: column;
-  */  
-  height: 85vh;
-  width: 100%;
-  margin-top: 110px;
-  padding-left: 70px;
-  padding-right: 70px;
-  border: 0px solid red;
-}
-
-.text-content {
-    padding: 3rem;
-}
-
-canvas {
-  background-color: #ffffff;
-}
-
-.text-and-lpc {
-  /*
-  display: -webkit-flex;
-  -webkit-flex: 1;
-  font-size: 1rem;
-  padding: 3rem;
-  border: 1px solid blue;
+  /* 
+    These are here b/c I couldn't get the ng-show, ng-hide, & ng-if to trigger as soon as the class changed. They would stay in the DOM and display other eles and then get cleaned up after ~0.25s 
   */
-}
+  .animated.ng-enter, 
+  .animate-if.ng-leave {
+    transition: 0s;
+  }
 
-.text-and-lpc__text {
-  /*font-size: 14pt;*/
-  font-size: 1.25em;
-}
+  .animated.ng-enter,
+  .animated.ng-leave.ng-leave-active {
+    display: none;
+  }
 
-.pane {
-  /*
-  flex-flow: column;
-  border: 1px solid red;
-  */
-}
+  .animated.ng-leave,
+  .animated.ng-enter.ng-enter-active {
+    display: block;
+  }
 
-// NAV STYLES ======================================================
+ // PAGE LAYOUT  =================================================================
+ 
+  // IN INDEX.HTML ----------------------------------
+    #app-container { // this is the parent ele for the index.html view: <ion-nav-view>
+      display: -webkit-flex;
+      -webkit-flex-direction: row;
+      line-height: 1.7;
+      height: $appH + $statusBarH;
+      width: $appW;
+      color: $grey-txtMain;
+      //border: 1px solid yellow; //#db
+    }
 
-.nav-container {
-  z-index: 99;
-}
+    /* unfortunately, I think the correct way to update this is with native code:
+      https://developer.apple.com/reference/uikit/uiviewcontroller#//apple_ref/occ/instm/UIViewController/preferredStatusBarStyle  */
+    #statusBar-bg {
+      height: $statusBarH;
+      width: $appW;
+      background-color: $blue-main; //$blue-white; //$blue-main; //$grey-txtMain; //white; //$blue-dark;
+      border-bottom: 1px solid $blue-white;
+    }
 
+  // IN ROOT_TEMPLATE.HTML ----------------------------------
+    #nav-and-content-container {  // this is the parent ele for the root_template view: <ion-view>
+      display: flex;
+      flex-flow: row nowrap;
+      //border: 1px solid red; //#db
+    }
+
+    .bar-header { // styles <ion-header-bar> 
+      background-color: $blue-light;
+      //height-min: 106px; //iOS cordova will overwrite this 
+      height: $rowH !important; //iOS cordova will overwrite this if not !important
+      display: flex;
+      align-items: center; // vertical align, but doesn't work w/ iOS cordova
+      //justify-content: space-between;
+      box-shadow: $itemShadow;
+      padding-left: $navW;
+      //border: 1px solid red; //#db
+
+      .title { // // styles .title w/in <ion-header-bar> 
+        position: relative;
+        display: block;
+        text-transform: uppercase;
+        color: $blue-main;
+        font-weight: bold;
+        font-size: $header-type;
+        line-height: 0; // this adjusts for weird iOS stuff
+        padding-top: 10px; // also adjusts for weird iOS styling
+        text-align: left;
+        overflow: visible;
+      }
+    }
+
+    #content-container { // this styles the content view in root_template.html: </ion-nav-view>
       display: -webkit-flex;
       -webkit-flex: 1;
-      margin-top: $rowHalf;
-      margin-left: $navW; 
-      height: auto;
-      width: $appW - $navW - $col-pad;
-      font-size: 1rem;
-      border: 1px solid $blue-light; //#db DEBUG LINES
-    }
-
-    .state-contentBox--wide {  // used in tutorial for full width graphics
-      @extend .state-contentBox;
-      margin-left: 0;
-      padding: 0; 
-      width: $appW;
+      -webkit-flex-direction: column;
+      justify-content: flex-start;
+      text-align: center;
+      height: $appH - $rowH;
+      width: $appW; // - $navW - $col-pad; //#hc this will need to be padding
+      margin-top: $rowH;
+      //border: 1px solid red; //#db
     }
 
 
-    .pane {  
-      // not entirely sure what this does. seems to be an ion-thing that groups content. 
-      //currently, used in Resources & Profiles. It should probably be moved to the individual state .scss files #hc
-      flex-flow: column;
-      //border: 1px solid yellow;
-    }
-
-    canvas {
-      background-color: $white;
-      // box-shadow
-      // rounded corners
-    }
-
-
-// NAV CONTAINER -------------------------------------
+// NAV CONTAINER =================================================================
   // All of the nav icon animations live in  'common-styles/_keyframeAni.scss' 
 
   #nav-container {
@@ -179,10 +151,55 @@ canvas {
     }
   }
 
-.nav-svg {
-  height: 65px;
-  width: 65px;
-  display: block;
-  margin: 0 auto;
-  padding-bottom: 5px;
-}
+  .navTabText {
+    margin: auto;
+  }
+
+  .nav-svg {
+    height: 65px; //~61%
+    width: 65px; //~61%
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 5px;
+    //border: 1px solid yellow;
+  }
+
+
+// GLOBAL [STATE]_TEMPLATE.HTML LAYOUT ===================================================
+  /* The <ion-view> for each [state]_template.html should be the direct descendant of #content-container
+     This section contains global styles for the state-level ion-view. Any individual styles for each state should go in ion-view.state-contentBox's direct descendant and should be styled in the state's .scss file
+  */
+    .state-contentBox {
+      padding: 0; // reset 
+      margin: 0; // reset
+
+      display: -webkit-flex;
+      -webkit-flex: 1;
+      margin-top: $rowHalf;
+      margin-left: $navW; 
+      height: auto;
+      width: $appW - $navW - $col-pad;
+      font-size: 1rem;
+      //border: 1px solid $blue-light; //#db DEBUG LINES
+    }
+
+    .state-contentBox--wide {  // used in tutorial for full width graphics
+      @extend .state-contentBox;
+      margin-left: 0;
+      padding: 0; 
+      width: $appW;
+    }
+
+    .pane {  
+      // not entirely sure what this does. seems to be an ion-thing that groups content. 
+      //currently, used in Resources & Profiles. It should probably be moved to the individual state .scss files #hc
+      flex-flow: column;
+      //border: 1px solid yellow;
+    }
+
+    canvas {
+      background-color: $white;
+      // box-shadow #hc
+      // rounded corners #hc
+    }
+
