fixes css conflict issues

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -408,7 +408,8 @@ input[type=range]::-webkit-slider-thumb {
 
 #nav-and-content-container {
   display: flex;
-  flex-flow: row nowrap; }
+  flex-flow: row nowrap;
+  margin-top: 2.9vh; }
 
 .bar-header {
   background-color: #c5f3ff;
