--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -49,6 +49,8 @@
       //border: 1px solid yellow; //#db
     }
 
+  // IN ROOT_TEMPLATE.HTML ----------------------------------
+
     /* unfortunately, I think the correct way to update this is with native code:
       https://developer.apple.com/reference/uikit/uiviewcontroller#//apple_ref/occ/instm/UIViewController/preferredStatusBarStyle  */
     #statusBar-bg {
@@ -58,10 +60,10 @@
       border-bottom: 1px solid $blue-white;
     }
 
-  // IN ROOT_TEMPLATE.HTML ----------------------------------
     #nav-and-content-container {  // this is the parent ele for the root_template view: <ion-view>
       display: flex;
       flex-flow: row nowrap;
+      margin-top: $statusBarH;
       //border: 1px solid red; //#db
     }
 
