--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -366,8 +366,7 @@ input[type=range]::-webkit-slider-thumb {
   outline: none;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
-  -webkit-user-select: none; }
+  font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important; }
 
 .animated {
   -webkit-animation-duration: 1s;
