--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -389,6 +389,26 @@ input[type=range]::-webkit-slider-thumb {
 .animated.ng-enter.ng-enter-active {
   display: block; }
 
+.big-button {
+  height: 65px;
+  background-color: #FFECCB;
+  color: #e79b4c;
+  border: 0px solid red;
+  position: relative;
+  height: 65px;
+  width: 80px;
+  margin: 0px;
+  padding: 5px;
+  font-size: 0.90em;
+  font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
+  font-weight: 800;
+  text-align: center;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  z-index: 99;
+  border: 0;
+  display: block;
+  margin-bottom: 20px; }
+
 #app-container {
   display: -webkit-flex;
   -webkit-flex-direction: row;
@@ -648,25 +668,7 @@ lpc-directive {
   right: 0; }
 
 .reset-button {
-  height: 65px;
-  background-color: #FFECCB;
-  color: #e79b4c;
-  float: right;
-  border: 0px solid red;
-  position: relative;
-  height: 65px;
-  width: 80px;
-  margin: 0px;
-  padding: 5px;
-  font-size: 0.90em;
-  font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
-  font-weight: 800;
-  text-align: center;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-  z-index: 99;
-  border: 0;
-  display: block;
-  margin-bottom: 20px; }
+  float: right; }
 
 .rate-box button {
   float: right;
