--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -614,7 +614,7 @@ canvas {
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 1;
+  z-index: -1;
   opacity: 0.1; }
 
 .tutNoWave-content {
@@ -708,12 +708,14 @@ canvas {
       flex-direction: row;
       min-height: 25px;
       width: 100%; }
-    .tutSingleWave-content .rightBox .starImg {
+    .tutSingleWave-content .rightBox .starBox {
       position: absolute;
       height: 265px;
-      width: 267px;
+      width: 265px;
       top: 27.74286vh;
       border: 1px solid lightBlue; }
+    .tutSingleWave-content .rightBox .starImg {
+      position: relative; }
 
 .tutPgView-content {
   display: flex;
