end of v.1 nested states

--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -246,10 +246,8 @@
     }
 
     .pane {  
-      // not entirely sure what this does. seems to be an ion-thing that groups content. 
-      //currently, used in Resources & Profiles. It should probably be moved to the individual state .scss files #hc
       flex-flow: column;
-      //border: 1px solid yellow;
+      background-color: transparent;
     }
 
     canvas {
