--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -18,6 +18,18 @@
   font-weight: bold;
   font-style: normal; }
 
+.txtBold, .txtBold-blue, .txtBold-blueDark, .txtBold-blueLight {
+  font-weight: 600; }
+
+.txtBold-blue {
+  color: #53c8e9; }
+
+.txtBold-blueDark {
+  color: #018B9D; }
+
+.txtBold-blueLight {
+  color: #c5f3ff; }
+
 button {
   font-weight: bold; }
 
@@ -551,7 +563,8 @@ canvas {
   width: 100vw; }
 
 .pane {
-  flex-flow: column; }
+  flex-flow: column;
+  background-color: transparent; }
 
 canvas {
   background-color: #ffffff; }
@@ -580,13 +593,17 @@ canvas {
   height: 475px;
   z-index: 10; }
 
+.pane {
+  background-color: transparent; }
+
 #pageView {
   width: 100%;
   height: 475px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: stretch; }
+  align-items: stretch;
+  background-color: transparent; }
 
 .pageView {
   width: 100%;
@@ -595,8 +612,7 @@ canvas {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
-  font-size: 1.4em;
-  border: 1px solid lightBlue; }
+  font-size: 1.4em; }
 
 .tutPg-header {
   display: flex;
@@ -604,9 +620,9 @@ canvas {
   justify-content: flex-start;
   align-items: flex-start;
   text-align: left;
-  padding: 0;
   width: 100%;
-  height: auto; }
+  height: auto;
+  padding-bottom: 1em; }
 
 .tut-bgImg {
   height: 100%;
@@ -614,35 +630,10 @@ canvas {
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: -1;
-  opacity: 0.1; }
+  z-index: -1; }
 
-.tutNoWave-content {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  justify-content: space-between;
-  height: 100%; }
-  .tutNoWave-content .noWaveBox {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-    width: 60%;
-    height: 41.61429vh; }
-  .tutNoWave-content .noWaveRow {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    text-align: left;
-    width: 100%; }
-    .tutNoWave-content .noWaveRow .noWave3 {
-      width: 50%; }
-  .tutNoWave-content .charImg {
-    position: absolute; }
+.tut-bgImg--dim {
+  opacity: 0.1; }
 
 .tutSingleWave-content {
   display: flex;
@@ -655,45 +646,43 @@ canvas {
   .tutSingleWave-content .leftBox {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    max-height: 100%;
     width: 65%; }
     .tutSingleWave-content .leftBox .leftRow {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
       align-items: flex-start; }
-    .tutSingleWave-content .leftBox .wave1 {
-      padding: 10px;
-      padding-top: 20px; }
-      .tutSingleWave-content .leftBox .wave1 .waveFrame {
-        height: 190px;
-        width: 500px;
+    .tutSingleWave-content .leftBox .wave1 .waveFrame {
+      height: 190px;
+      width: 500px;
+      background-color: #F0F9FC;
+      border-radius: 10px;
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15); }
+      .tutSingleWave-content .leftBox .wave1 .waveFrame .lpcBox {
+        margin: 10px;
+        height: 170px;
+        width: 480px;
+        border-radius: 10px;
+        background-color: #c5f3ff; }
+      .tutSingleWave-content .leftBox .wave1 .waveFrame .waveFrame-label {
+        position: relative;
+        margin: 10px;
+        top: -190px;
+        left: 0px;
+        height: auto;
+        padding: 7px 15px;
+        width: 225px;
+        margin: 0 auto;
         background-color: #F0F9FC;
         border-radius: 10px;
-        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15); }
-        .tutSingleWave-content .leftBox .wave1 .waveFrame .lpcBox {
-          margin: 10px;
-          height: 170px;
-          width: 480px;
-          border-radius: 10px;
-          background-color: #c5f3ff; }
-        .tutSingleWave-content .leftBox .wave1 .waveFrame .waveFrame-label {
-          position: relative;
-          margin: 10px;
-          top: -190px;
-          left: 0px;
-          height: auto;
-          padding: 5px;
-          width: 190px;
-          margin: 0 auto;
-          background-color: #F0F9FC;
-          border-radius: 10px;
-          text-align: center; }
-          .tutSingleWave-content .leftBox .wave1 .waveFrame .waveFrame-label .waveFrame-label--txt {
-            font-size: 1em; }
-          .tutSingleWave-content .leftBox .wave1 .waveFrame .waveFrame-label .waveFrame-label--title {
-            font-size: 0.65em;
-            font-weight: bold; }
+        text-align: center; }
+        .tutSingleWave-content .leftBox .wave1 .waveFrame .waveFrame-label .waveFrame-label--txt {
+          font-size: 0.65em;
+          line-height: 1em; }
+        .tutSingleWave-content .leftBox .wave1 .waveFrame .waveFrame-label .waveFrame-label--title {
+          font-size: 0.65em;
+          font-weight: bold; }
     .tutSingleWave-content .leftBox .leftRow2 {
       padding-top: 20px; }
     .tutSingleWave-content .leftBox .leftRow3 {
@@ -702,7 +691,8 @@ canvas {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 33%; }
+    width: 33%;
+    padding-top: 0px; }
     .tutSingleWave-content .rightBox .rightRow1 {
       display: flex;
       flex-direction: row;
@@ -712,8 +702,7 @@ canvas {
       position: absolute;
       height: 265px;
       width: 265px;
-      top: 27.74286vh;
-      border: 1px solid lightBlue; }
+      top: 27.74286vh; }
     .tutSingleWave-content .rightBox .starImg {
       position: relative; }
 
@@ -723,41 +712,35 @@ canvas {
   flex-wrap: nowrap;
   align-items: flex-start;
   justify-content: space-between;
-  height: 100%;
-  border: 1px solid orange; }
+  height: 100%; }
   .tutPgView-content .leftBox {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 65%;
-    border: 1px solid lightBlue; }
+    width: 65%; }
     .tutPgView-content .leftBox .leftRow {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
       align-items: flex-start;
-      height: 10%;
-      border: 1px solid lightBlue; }
+      height: 10%; }
     .tutPgView-content .leftBox .leftRow3 {
       flex-direction: column; }
   .tutPgView-content .rightBox {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 33%;
-    border: 1px solid orange; }
+    width: 33%; }
     .tutPgView-content .rightBox .rightRow1 {
       display: flex;
       flex-direction: row;
       min-height: 25px;
-      width: 100%;
-      border: 1px solid lightBlue; }
+      width: 100%; }
     .tutPgView-content .rightBox .starBox {
       position: absolute;
       height: 265px;
       width: 267px;
-      top: 27.74286vh;
-      border: 1px solid yellow; }
+      top: 27.74286vh; }
 
 .inputBox {
   position: absolute;
@@ -765,7 +748,7 @@ canvas {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  width: 60%;
+  width: 65%;
   height: auto;
   top: 48.55vh;
   margin-bottom: 6.93571vh; }
@@ -833,6 +816,97 @@ ion-slide-page {
 
 .sandbar-coinTxt {
   margin-top: 5px; }
+
+.activeCoin {
+  color: red;
+  font-weight: bold; }
+
+.tutNoWave-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 100%; }
+  .tutNoWave-content .noWaveBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 60%;
+    height: auto;
+    padding: 10px 0; }
+  .tutNoWave-content .noWaveRow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: left;
+    width: 100%;
+    margin: 10px 0; }
+    .tutNoWave-content .noWaveRow .noWave3 {
+      width: 50%; }
+  .tutNoWave-content .charImg {
+    position: absolute; }
+
+.tutNoWave-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 100%; }
+  .tutNoWave-content .noWaveBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 60%;
+    height: auto;
+    padding: 10px 0; }
+  .tutNoWave-content .noWaveRow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: left;
+    width: 100%;
+    margin: 10px 0; }
+    .tutNoWave-content .noWaveRow .noWave3 {
+      width: 50%; }
+  .tutNoWave-content .charImg {
+    position: absolute; }
+
+.tutNoWave-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 100%; }
+  .tutNoWave-content .noWaveBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 60%;
+    height: auto;
+    padding: 10px 0; }
+  .tutNoWave-content .noWaveRow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: left;
+    width: 100%;
+    margin: 10px 0; }
+    .tutNoWave-content .noWaveRow .noWave3 {
+      width: 50%; }
+  .tutNoWave-content .charImg {
+    position: absolute; }
 
 .words-word {
   font-size: 3rem;
